fix icon alignment

--- a/frontend/src/components/sidebar/Sidebar.scss
+++ b/frontend/src/components/sidebar/Sidebar.scss
@@ -45,6 +45,10 @@
                 font-weight: 500;
                 gap: 10px;
                 text-decoration: none;
+
+                svg {
+                    margin: auto 0;
+                }
             }
         }
     }
